#5 Perfil e Feeds done

--- a/flutter_basic/web/index.html
+++ b/flutter_basic/web/index.html
@@ -36,8 +36,10 @@
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
   </script>
-  <!-- This script adds the flutter initialization JS code -->
+
+    <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbKEsEY4ULk4pMbeW2VdpL-CFZSX4wfvA&callback=initMap%22%3E"></script>
 </head>
 <body>
   <script>
