--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,15 +34,12 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-<<<<<<< HEAD
-    var serviceWorkerVersion = "2690523674";
-=======
-    var serviceWorkerVersion = '2042728558';
->>>>>>> token_support
+    var serviceWorkerVersion = '3071266046';
   </script>
-  <!-- This script adds the flutter initialization JS code -->
+
+    <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbKEsEY4ULk4pMbeW2VdpL-CFZSX4wfvA&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbKEsEY4ULk4pMbeW2VdpL-CFZSX4wfvA&callback=initMap%22%3E"></script>
 </head>
 <body>
   <script>
