--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,7 +34,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1355531045";
+    var serviceWorkerVersion = '138522794';
   </script>
 
     <!-- This script adds the flutter initialization JS code -->
